implements functionality to add movies to lists

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,14 @@
 // Specific CSS for your home-page
+
+img {
+  width: 160px;
+}
+
+ul {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.movie .text {
+  margin-right: 80px;
+}
