--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,1 +1,17 @@
-<h1>All movies</h1>
+<div class="container">
+  <h1 class="mb-4 pt-4">All movies</h1>
+  <hr>
+  <ul>
+    <% @movies.each do |movie| %>
+      <li class="movie d-flex mb-4 justify-content-between">
+        <div class="text">
+          <h5><%= movie.title %></h5>
+          <p><%= movie.overview %></p>
+          <p>Rating: <%= movie.rating %></p>
+        </div>
+        <img class="" src="<%= movie.poster_url %>" alt="Film poster">
+      </li>
+      <hr>
+    <% end %>
+  </ul>
+</div>
